--- a/Task/pom.xml
+++ b/Task/pom.xml
@@ -73,7 +73,7 @@
             <artifactId>mystem-scala</artifactId>
             <version>${ext.mystem-scala.version}</version>
         </dependency>
-        <!--
+
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-web</artifactId>
@@ -87,8 +87,10 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-config</artifactId>
-            <version>6.0.4</version>
-        </dependency>-->
+            <version>6.1.2</version>
+        </dependency>
+
+
 
 
 
